fix: info box spacing styling

--- a/Childrens-Social-Care-CPD/styles/scss/overrides/_site.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/overrides/_site.scss
@@ -299,10 +299,18 @@
 .infobox {
     background: #ebf2f6;
     border-top: #347ca9 solid 10px;
-    margin: 25px 0 25px 15px;
+    margin: 25px 15px 25px 30px;
     padding-left: 20px;
     padding-right: 20px;
     position: relative;
+}
+
+@media (max-width: 768px) {
+    .infobox {
+        margin-left: 30px;
+        margin-right: 15px;
+        padding: 15px;
+    }
 }
 
 div.infobox-width-container {
