--- a/Childrens-Social-Care-CPD/wwwroot/css/application.css
+++ b/Childrens-Social-Care-CPD/wwwroot/css/application.css
@@ -11533,12 +11533,19 @@ p#content-banner-subtitle.govuk-body-l {
 .infobox {
   background: #ebf2f6;
   border-top: #347ca9 solid 10px;
-  margin: 25px 0 25px 15px;
+  margin: 25px 15px 25px 30px;
   padding-left: 20px;
   padding-right: 20px;
   position: relative;
 }
 
+@media (max-width: 768px) {
+  .infobox {
+    margin-left: 30px;
+    margin-right: 15px;
+    padding: 15px;
+  }
+}
 div.infobox-width-container {
   margin-left: 0;
 }
